# yolo26-visdrone

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: __init__.py  gradio_app.py
configs/: __init__.py  config.yaml
configs/data/: visdrone.yaml
configs/model/: yolo11n.yaml  yolo26n.yaml
configs/training/: default.yaml  production.yaml
data/: visdrone.yaml
docker/: Dockerfile  app.py
kaggle-kernel/: benchmark.ipynb
notebooks/: kaggle_visdrone_benchmark.ipynb
results/: benchmark_results.json  metrics.csv  model_info.csv  size_metrics.csv  speed.csv
scripts/: create_comparison_charts.py
src/: __init__.py
src/data/: __init__.py  download.py
src/evaluation/: __init__.py  benchmark.py  coco_eval.py  metrics.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  constants.py  visualization.py
tests/: __init__.py  test_benchmark.py
