[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo26-visdrone"
version = "0.1.0"
description = "YOLO26 vs YOLO11 benchmark on VisDrone dataset for small object detection"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Murat Raimbekov", email = "murat.raimbekov2004@gmail.com"}
]
maintainers = [
    {name = "Murat Raimbekov", email = "murat.raimbekov2004@gmail.com"}
]
keywords = [
    "yolo",
    "yolo26",
    "yolo11",
    "object-detection",
    "visdrone",
    "drone",
    "small-object-detection",
    "deep-learning",
    "computer-vision",
    "benchmark"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
requires-python = ">=3.9"
dependencies = [
    "ultralytics>=8.3.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pycocotools>=2.0.7",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "gradio>=4.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "huggingface_hub>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "isort>=5.12.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "nbformat>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/raimbekovm/yolo26-visdrone"
Documentation = "https://github.com/raimbekovm/yolo26-visdrone#readme"
Repository = "https://github.com/raimbekovm/yolo26-visdrone"
Issues = "https://github.com/raimbekovm/yolo26-visdrone/issues"
Demo = "https://huggingface.co/spaces/raimbekovm/yolo26-visdrone"

[project.scripts]
visdrone-benchmark = "src.evaluation.benchmark:main"
visdrone-train = "src.training.trainer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*", "configs*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | datasets
    | runs
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".venv",
    "datasets",
    "runs",
    "*.ipynb",
]

[tool.ruff.isort]
known-first-party = ["src", "app", "configs"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "datasets/",
    "runs/",
    "notebooks/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
